--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -85,9 +85,8 @@
 
 % List of Figures, Tables
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-\listoffigures\addcontentsline{toc}{chapter}{\listfigurename}
-\lstlistoflistings\addcontentsline{toc}{chapter}{\lstlistlistingname}
-\listoftodos 
+%\listoffigures\addcontentsline{toc}{chapter}{\listfigurename}
+%\lstlistoflistings\addcontentsline{toc}{chapter}{\lstlistlistingname}
 
 % Bibliography
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
