--- a/src/bib/mybib.bib
+++ b/src/bib/mybib.bib
@@ -1,5 +1,5 @@
 @misc{lima2019framework,
-	title={A framework for verifying deadlock and nondeterminism in UML activity diagrams based on CSP}, 
+	title={A framework for verifying deadlock and nondeterminism in {UML} activity diagrams based on {CSP}}, 
 	author={Lucas Lima and Amaury Tavares and Sidney C. Nogueira},
 	year={2019},
 	eprint={1910.13638},
@@ -30,34 +30,36 @@ pages = {231-274},
 year = {1987},
 issn = {0167-6423},
 doi = {https://doi.org/10.1016/0167-6423(87)90035-9},
-url = {https://www.sciencedirect.com/science/article/pii/0167642387900359},
 author = {David Harel},
 abstract = {We present a broad extension of the conventional formalism of state machines and state diagrams, that is relevant to the specification and design of complex discrete-event systems, such as multi-computer real-time systems, communication protocols and digital control units. Our diagrams, which we call statecharts, extend conventional state-transition diagrams with essentially three elements, dealing, respectively, with the notions of hierarchy, concurrency and communication. These transform the language of state diagrams into a highly structured and economical description language. Statecharts are thus compact and expressive—small diagrams can express complex behavior—as well as compositional and modular. When coupled with the capabilities of computerized graphics, statecharts enable viewing the description at different levels of detail, and make even very large specifications manageable and comprehensible. In fact, we intend to demonstrate here that statecharts counter many of the objections raised against conventional state diagrams, and thus appear to render specification by diagrams an attractive and plausible approach. Statecharts can be used either as a stand-alone behavioral description or as part of a more general design methodology that deals also with the system's other aspects, such as functional decomposition and data-flow specification. We also discuss some practical experience that was gained over the last three years in applying the statechart formalism to the specification of a particularly complex system.}
 }
 
 @InProceedings{10.1007/978-3-642-82453-1_17,
-author="Harel, D.
-and Pnueli, A.",
-editor="Apt, Krzysztof R.",
-title="On the Development of Reactive Systems",
-booktitle="Logics and Models of Concurrent Systems",
-year="1985",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="477--498",
-abstract="Some observations are made concerning the process of developing complex systems. A broad class of systems, termed reactive, is singled out as being particularly problematic when it comes to finding satisfactory methods for behavioral description. In this paper we recommend the recently proposed statechart method for this purpose. Moreover, it is observed that most reactive systems cannot be developed in a linear stepwise fashion, but, rather, give rise to a two-dimensional development process, featuring behavioral aspects in the one dimension and implementational ones in the other. Concurrency may occur in both dimensions, as orthogonality of states in the one and as parallelism of subsystems in the other. A preliminary approach to working one's way through this ``magic square'' of system development is then presented. The ideas described herein seem to be relevant to a wide variety of application areas.",
-isbn="978-3-642-82453-1"
+author={Harel, D.
+and Pnueli, A.},
+editor={Apt, Krzysztof R.},
+title={On the Development of Reactive Systems},
+booktitle={Logics and Models of Concurrent Systems},
+year={1985},
+publisher={Springer Berlin Heidelberg},
+address={Berlin, Heidelberg},
+pages={477--498},
+abstract={Some observations are made concerning the process of developing complex systems. A broad class of systems, termed reactive, is singled out as being particularly problematic when it comes to finding satisfactory methods for behavioral description. In this paper we recommend the recently proposed statechart method for this purpose. Moreover, it is observed that most reactive systems cannot be developed in a linear stepwise fashion, but, rather, give rise to a two-dimensional development process, featuring behavioral aspects in the one dimension and implementational ones in the other. Concurrency may occur in both dimensions, as orthogonality of states in the one and as parallelism of subsystems in the other. A preliminary approach to working one's way through this ``magic square'' of system development is then presented. The ideas described herein seem to be relevant to a wide variety of application areas.},
+isbn={978-3-642-82453-1}
 }
 
 @ARTICLE{24143,  author={Murata, T.},  journal={Proceedings of the IEEE},   title={Petri nets: Properties, analysis and applications},   year={1989},  volume={77},  number={4},  pages={541-580},  doi={10.1109/5.24143}}
 
-@article{https://doi:10.4018/978-1-4666-5888-2.ch705,
-author = {Hasan, Osman and Sofiène Tahar. },
-title = {Encyclopedia of Information Science and Technology, Third Edition},
-chapter={Formal Verification Methods.},
-pages = {7162-7170.},
-doi = {https://doi:10.4018/978-1-4666-5888-2.ch705},
-year = {2015}
+@Article{en12010019,
+AUTHOR = {Ahmed, Asad and Hasan, Osman and Awwad, Falah and Bastaki, Nabil and Hasan, Syed Rafay},
+TITLE = {Formal Asymptotic Analysis of Online Scheduling Algorithms for Plug-In Electric Vehicles’ Charging},
+JOURNAL = {Energies},
+VOLUME = {12},
+YEAR = {2019},
+NUMBER = {1},
+ARTICLE-NUMBER = {19},
+ISSN = {1996-1073},
+DOI = {10.3390/en12010019}
 }
 
 @article{https://doi.org/10.1002/sys.21524,
@@ -69,18 +71,15 @@ number = {1},
 pages = {118-135},
 keywords = {model-based systems engineering, system behavior modeling, model transformation},
 doi = {https://doi.org/10.1002/sys.21524},
-url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sys.21524},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sys.21524},
-abstract = {Abstract The development of contemporary systems is an extremely complex process. One approach to modeling system behavior uses activity diagrams from Unified Modeling Language (UML)/System Modeling Language (SysML), providing a standard object-oriented graphical notation and enhancing reusability. However, UML/SysML activity diagrams do not directly support the kind of analysis needed to verify the system behavior, such as might be available with a Petri net (PN) model. We show that a behavior model represented by a set of fUML-compliant modeling elements in UML/SysML activity diagrams can be transformed into an equivalent PN, so that the analysis capability of PN can be applied. We define a formal mathematical notation for a set of modeling elements in activity diagrams, show the mapping rules between PN and activity diagrams, and propose a formal transformation algorithm. Two example system behavior models represented by UML/SysML activity diagrams are used for illustration.},
 year = {2020}
 }
 
 
 @article{DoD_modeling_and_simulation,
-author = {DoD},
-title = {DoD Modeling and Simulation (M\&S) Glossary},
-journal = {DoD Manual 5000.59-M. Arlington, VA, USA: US Department of Defense},
-url = {https://apps.dtic.mil/sti/pdfs/ADA349800.pdf},
+author = {{DoD}},
+title = {{DoD} Modeling and Simulation {(M\&S)} Glossary},
+journal = {{DoD} Manual 5000.59-M. Arlington, {VA}, {USA}: {US} Department of Defense},
 year = {1998}
 }
 @article{sysml_practical_guide,
@@ -92,7 +91,6 @@ year = {2014}
 @article{modsim,
 author = {Bellinger, G},
 title = {Modeling \& Simulation: An Introduction.},
-url = {http://www.systems-thinking.org/modsim/modsim.htm},
 year = {2004}
 }
 @article{object-process-methodology,
@@ -103,27 +101,23 @@ year = {2002}
 }
 @article{ORMSC/2010-09-06,
 author = {Object Management Group},
-title = {MDA Foundation Model. OMG document number ORMSC/2010-09-06.},
+title = {{MDA} Foundation Model. {OMG} document number {ORMSC/2010-09-06.}},
 year = {2010}
 }
 
 @article{incose-systems-engineering-2020,
-title = {Technical Operations International Council on Systems Engineering INCOSE. INCOSE Systems Engineering Vision 2020. Technical report.},
-url = {https://sebokwiki.org/wiki/INCOSE_Systems_Engineering_Vision_2020}
+title = {Technical Operations International Council on Systems Engineering {INCOSE}. {INCOSE} Systems Engineering Vision 2020. Technical report.}
 }
 @article{mbse,
-title = {Model-Based Systems Engineering (MBSE) (glossary)},
-url = {https://sebokwiki.org/wiki/Model-Based_Systems_Engineering_(MBSE)_(glossary)}
+title = {Model-Based Systems Engineering ({MBSE}) (glossary)}
 }
 @article{omgwiki,
-title = {MBSE Wiki},
-url = {https://www.omgwiki.org/MBSE/doku.php?id=start}
+title = {{MBSE} Wiki}
 }
 
 @article{fuml,
 author = {Object Management Group},
-title = {Semantics of a Foundational Subset for Executable UML Models},
-url = {https://www.omg.org/spec/FUML/1.4/},
+title = {Semantics of a Foundational Subset for Executable {UML} Models},
 year = {2018}
 }
 
@@ -137,14 +131,12 @@ title = {Application Note A Crash Course in UML State Machines Document Revision
 
 @article(omg_sysml,
 author = {Object Management Group},
-title = {OMG System Modeling Language},
-url = {https://www.omg.org/spec/SysML/}
+title = {{OMG} System Modeling Language}
 )
 
 @article(omg_sysml_v2,
 author = {Object Management Group},
-title = {Systems Modeling Language Version 2 (SysMLv2)},
-url = {https://www.omgsysml.org/SysML-2.htm},
+title = {Systems Modeling Language Version 2 ({SysMLv2})}
 year = {2020},
 )
 
@@ -168,7 +160,7 @@ journal = {Scientific Students’ Association Report}
 
 @article(euml,
 author = {Mellor SJ, Balcer MJ.},
-title = {Executable UML: A Foundation for Model- DrivenArchitecture.},
+title = {Executable {UML}: A Foundation for Model- {DrivenArchitecture}.},
 year = {2002},
 journal = {The Addison-Wesley Object TechnologySeries: Addison-Wesley Professional}
 )
@@ -180,8 +172,8 @@ year = {2021}
 )
 
 @article(pssm,
-author = {OMG},
-title = {Precise Semantics of UML State Machines (PSSM)},
+author = {{OMG}},
+title = {Precise Semantics of {UML} State Machines ({PSSM})},
 year = {2019},
 journal = {formal/19-05-01.}
 )
@@ -200,23 +192,19 @@ day={01},
 volume={19},
 number={6},
 pages={1483-1517},
-abstract={The increasing complexity of reactive systems can be mitigated with the use of components and composition languages in model-driven engineering. Designing composition languages is a challenge itself as both practical applicability (support for different composition approaches in various application domains), and precise formal semantics (support for verification and code generation) have to be taken into account. In our Gamma Statechart Composition Framework, we designed and implemented a composition language for the synchronous, cascade synchronous and asynchronous composition of statechart-based reactive components. We formalized the semantics of this composition language that provides the basis for generating composition-related Java source code as well as mapping the composite system to a back-end model checker for formal verification and model-based test case generation. In this paper, we present the composition language with its formal semantics, putting special emphasis on design decisions related to the language and their effects on verifiability and applicability. Furthermore, we demonstrate the design and verification functionality of the composition framework by presenting case studies from the cyber-physical system domain.},
 issn={1619-1374},
-doi={10.1007/s10270-020-00806-5},
-url={https://doi.org/10.1007/s10270-020-00806-5}
+doi={10.1007/s10270-020-00806-5}
 }
 
 @InProceedings{10.1007/978-3-319-11653-2_10,
-author="Reggio, Gianna and Leotta, Maurizio and Ricca, Filippo",
-editor="Dingel, Juergen and Schulte, Wolfram and Ramos, Isidro and Abrah{\~a}o, Silvia and Insfran, Emilio",
-title="Who Knows/Uses What of the UML: A Personal Opinion Survey",
-booktitle="Model-Driven Engineering Languages and Systems",
-year="2014",
-publisher="Springer International Publishing",
-address="Cham",
-pages="149--165",
-abstract="UML is a comprehensive notation, offering a very large set of diagrams and constructs covering any possible modelling need. As consequence, on one hand, it is difficult and time consuming to master it, and on the other hand, people tend, naturally, to consider only a part of it. In practice, many UML diagrams/constructs seem scarcely used or even their existence is not known. By means of a study covering any possible source of information (e.g. UML books and tools), we started to assess which part of the UML is considered and used in practice. Here, we present some results about knowledge and usage of the UML diagrams by means of a personal opinion survey with 275 participants from both industry and academy, analysing also the influence of different factors: working environment (academia vs. industry), working role, seniority, education, and gender.",
-isbn="978-3-319-11653-2"
+author={Reggio, Gianna and Leotta, Maurizio and Ricca, Filippo},
+editor={Dingel, Juergen and Schulte, Wolfram and Ramos, Isidro and Abrah{\~a}o, Silvia and Insfran, Emilio},
+title={Who Knows/Uses What of the {UML}: A Personal Opinion Survey},
+booktitle={Model-Driven Engineering Languages and Systems},
+year={2014},
+publisher={Springer International Publishing},
+address={Cham},
+pages={149--165}
 }
 
 @inproceedings{10.1145/3417990.3421407,
@@ -226,18 +214,7 @@ year = {2020},
 isbn = {9781450381352},
 publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3417990.3421407},
 doi = {10.1145/3417990.3421407},
-abstract = {Executable models can be used to support all engineering activities in Model-Based
-Systems Engineering. Testing and simulation of such models can provide early feedback
-about design choices. However, in today's complex systems, failures could arise due
-to subtle errors that are hard to find without checking all possible execution paths.
-Formal methods, and especially model checking can uncover such subtle errors, yet
-their usage in practice is limited due to the specialized expertise and high computing
-power required. Therefore we created an automated, cloud-based environment that can
-verify complex reachability properties on SysML State Machines using hidden model
-checkers. The approach and the prototype is illustrated using an example from the
-aerospace domain.},
 booktitle = {Proceedings of the 23rd ACM/IEEE International Conference on Model Driven Engineering Languages and Systems: Companion Proceedings},
 articleno = {37},
 numpages = {5},
@@ -254,8 +231,108 @@ number = {1},
 pages = {1-34},
 year = {1991},
 issn = {0304-3975},
-doi = {https://doi.org/10.1016/0304-3975(91)90203-E},
-url = {https://www.sciencedirect.com/science/article/pii/030439759190203E},
+doi = {https://doi.org/10.1016/0304-3975(91)90203-E}
 author = {Wolfgang Reisig},
 abstract = {Petri nets gain a great deal of modelling power by representing dynamically changing items as structured tokens (instead of “black dots”). Algebraic specifications turned out adequate for dealing with structured items. We will use this formalism to construct Petri nets with structured tokens. Place- and transition-invariants are useful analysis techniques for conventional Petri nets. We derive corresponding formalisms for nets with structured tokens, based on term substitution.}
+}
+
+@book{10.5555/332656,
+author = {Clarke, Edmund M. and Grumberg, Orna and Peled, Doron A.},
+title = {Model Checking},
+year = {2000},
+isbn = {0262032708},
+publisher = {MIT Press},
+address = {Cambridge, MA, USA}
+}
+
+@article{10.1145/1125808.1125809,
+author = {Eshuis, Rik},
+title = {Symbolic Model Checking of UML Activity Diagrams},
+year = {2006},
+issue_date = {January 2006},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {15},
+number = {1},
+issn = {1049-331X},
+doi = {10.1145/1125808.1125809},
+abstract = {Two translations from activity diagrams to the input language of NuSMV, a symbolic
+model verifier, are presented. Both translations map an activity diagram into a finite
+state machine and are inspired by existing statechart semantics. The requirements-level
+translation defines state machines that can be efficiently verified, but are a bit
+unrealistic since they assume the perfect synchrony hypothesis. The implementation-level
+translation defines state machines that cannot be verified so efficiently, but that
+are more realistic since they do not use the perfect synchrony hypothesis. To justify
+the use of the requirements-level translation, we show that for a large class of activity
+diagrams and certain properties, both translations are equivalent: regardless of which
+translation is used, the outcome of model checking is the same. Moreover, for linear
+stuttering-closed properties, the implementation-level translation is equivalent to
+a slightly modified version of the requirements-level translation. We use the two
+translations to model check data integrity constraints for an activity diagram and
+a set of class diagrams that specify the data manipulated in the activities. Both
+translations have been implemented in two tools. We discuss our experiences in applying
+both translations to model check some large example activity diagrams.},
+journal = {ACM Trans. Softw. Eng. Methodol.},
+month = jan,
+pages = {1–38},
+numpages = {38},
+keywords = {Unified Modeling Language, activity diagrams, Model checking}
+}
+
+@article{OUCHANI20142713,
+title = {A formal verification framework for SysML activity diagrams},
+journal = {Expert Systems with Applications},
+volume = {41},
+number = {6},
+pages = {2713-2728},
+year = {2014},
+issn = {0957-4174},
+doi = {https://doi.org/10.1016/j.eswa.2013.10.064},
+author = {Samir Ouchani and Otmane Aït Mohamed and Mourad Debbabi},
+keywords = {SysML activity diagram, Probabilistic automata, Probabilistic relation, PCTL}
+}
+
+@InProceedings{10.1007/978-3-642-33826-7_18,
+author="Ouchani, Samir
+and Ait Mohamed, Otmane
+and Debbabi, Mourad",
+editor="Eleftherakis, George
+and Hinchey, Mike
+and Holcombe, Mike",
+title="Efficient Probabilistic Abstraction for SysML Activity Diagrams",
+booktitle="Software Engineering and Formal Methods",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="263--277"
+}
+
+@InProceedings{10.1007/978-3-319-08156-4_36,
+author="Czopik, Jan
+and Ko{\v{s}}in{\'a}r, Michael Alexander
+and {\v{S}}tolfa, Jakub
+and {\v{S}}tolfa, Svatopluk",
+editor="K{\"o}mer, Pavel
+and Abraham, Ajith
+and Sn{\'a}{\v{s}}el, V{\'a}clav",
+title="Formalization of Software Process Using Intuitive Mapping of {UML} Activity Diagram to {CPN}",
+booktitle="Proceedings of the Fifth International Conference on Innovations in Bio-Inspired Computing and Applications {IBICA} 2014",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="365--374",
+isbn="978-3-319-08156-4"
+}
+
+@inproceedings{rahim:hal-00935748,
+  TITLE = {{Modular and Distributed Verification of SysML Activity Diagrams}},
+  AUTHOR = {RAHIM, Messaoud and Hammad, Ahmed and Ioualalen, Malika},
+  BOOKTITLE = {{MODELSWARD 2013, 1st Int. Conf. on Model-Driven Engineering and Software Development}},
+  ADDRESS = {Spain},
+  PAGES = {202 - 205},
+  YEAR = {2013},
+  MONTH = Jan,
+  PDF = {https://hal.archives-ouvertes.fr/hal-00935748/file/modelswardDA.pdf},
+  HAL_ID = {hal-00935748},
+  HAL_VERSION = {v1},
 }
