--- a/src/content/acknowledgement.tex
+++ b/src/content/acknowledgement.tex
@@ -2,4 +2,4 @@
 \chapter*{\koszonetnyilvanitas}\addcontentsline{toc}{chapter}{\koszonetnyilvanitas}
 %----------------------------------------------------------------------------
 
-Ez nem kötelező, akár törölhető is. Ha a szerző szükségét érzi, itt lehet köszönetet nyilvánítani azoknak, akik hozzájárultak munkájukkal ahhoz, hogy a hallgató a szakdolgozatban vagy diplomamunkában leírt feladatokat sikeresen elvégezze. A konzulensnek való köszönetnyilvánítás sem kötelező, a konzulensnek hivatalosan is dolga, hogy a hallgatót konzultálja.
+I would like to express my gratitude to my supervisors, Vince Molnár and Bence Graics, who have continuously guided me during this work, providing me valuable insights and feedback anytime I needed it. I would also like to thank András Vörös for starting me down the path of MBSE and formal verification all those years ago, and giving me the courage to write this report. And last, but not least, I would like to thank all my friends for their extreme patience and understanding during the last weeks.
