--- a/src/content/activity-language/design-decisions.tex
+++ b/src/content/activity-language/design-decisions.tex
@@ -2,7 +2,7 @@
 \section{Language Design}
 %----------------------------------------------------------------------------
 
-The purpose of GATL is twofold: it should support as many features from SysML activity diagrams as possible, while also having formal semantics. In order to make the transformation easier, the language supports only a constrained subset of the SysML feature set, however, this restriction does not hinder its expressiveness.
+The purpose of GATL is twofold: it should support as many features from SysML activity diagrams as possible, while also having formal semantics. In order to make the transformation easier, the language supports only a constrained subset of the SysML feature set.
 
 \subsection{Supported SysML Feature Subset}
 
@@ -13,7 +13,6 @@ Compared to SysML activity diagrams, GATL supports the following language constr
 	\item \emph{Initial} and \emph{activity final} nodes;
 	\item \emph{Decision} and \emph{merge} nodes - without probability;
 	\item \emph{Fork} and \emph{join} nodes;
-	\item \emph{Action} nodes - which can contain inner activities (Call behaviour in SysML);
-	\item \emph{Pins} on action nodes;
-	\item \emph{Action} nodes - action nodes may contain specific internal actions\footnote{Written in the Gamma Action Language} that can calculate values, and send signals through specific ports.
+	\item \emph{Action nodes} -- which can contain inner activities (Call behaviour in SysML) or specific internal actions\footnote{Written in the Gamma Action Language} that can calculate values, and send signals through specific ports.
+	\item \emph{Pins} on action nodes.
 \end{itemize}
