--- a/src/content/activity-language/dsl.tex
+++ b/src/content/activity-language/dsl.tex
@@ -6,9 +6,9 @@ Similarly to the Gamma Statechart Language, the Gamma Activity Language is inten
 
 \subsection{Metamodel}
 
-Due to the complexity of the final metamodel of the language, I have split it into multiple parts for easier understanding: Pins (\ref{ssec:pins}), Flows (\ref{ssec:flows}), Activity Nodes  (\ref{ssec:activity_nodes}), Structure (\ref{ssec:activity_nodes}), Composite Activities (\ref{ssec:composing-activities}) and Data-, Pin-reference (\ref{ssec:data-reference}-\ref{ssec:pin-reference}).
+Due to the complexity of the final metamodel of the language, I have split it into multiple parts for easier understanding: Pins, Flows, Activity Nodes, Structure, Composite Activities and Data-, Pin-reference.
 
-\subsubsection*{Pins}\label{ssec:pins}
+\subsubsection*{Pins}
 
 Pins are categorised into two sets, \emph{InputPins} and \emph{OutputPins}. All pins have a \emph{Type}\footnote{Types come from the Gamma Expression Language} associated with them, which define their domain. \autoref{fig:pins} shows this section of the metamodel.
 
@@ -19,14 +19,14 @@ Pins are categorised into two sets, \emph{InputPins} and \emph{OutputPins}. All 
 	\label{fig:pins}
 \end{figure}
 
-\subsubsection*{Flows}\label{ssec:flows}
+\subsubsection*{Flows}
 
 Flows have two kinds, \emph{ControlFlows} and \emph{DataFlows}. All flows have a guard of type \emph{Expression}\footnote{Written in the Gamma Expression Language}, which can evaluate to a \emph{boolean} value; if it evaluates to \emph{True}, the flow is considered \emph{enabled}. \autoref{fig:flows} depicts the relation of flows in the metamodel.
 
 \begin{figure}[!ht]
 	\centering
-	\includesvg[inkscapelatex=false, width=90mm, keepaspectratio]{flows}
-	\caption{The Flows structure}
+	\includesvg[inkscapelatex=false, width=100mm, keepaspectratio]{flows}
+	\caption{The Flows structure.}
 	\label{fig:flows}
 \end{figure}
 
@@ -34,24 +34,24 @@ Flows have two kinds, \emph{ControlFlows} and \emph{DataFlows}. All flows have a
 
 \emph{ControlFlows} have a reference to their source and target nodes.
 
-\paragraph{Data Flow}\label{par:data_flow}
+\paragraph{Data Flow}
 
 \emph{DataFlows} contain a \emph{DataSourceReference} and a \emph{DataTargetReference}, which can either be a \emph{Pin}, or a \emph{DataNode}. A data token may contain a value of any kind, but that token can travel only to and from data \emph{sources} and \emph{targets}. This will be explained in more detail below.
 
-\subsubsection*{Activity Nodes}\label{ssec:activity_nodes}
+\subsubsection*{Activity Nodes}
 
 In the following, I will talk about the different kinds of \emph{ActivityNodes} and their special meanings. The metamodel described in this section can be seen in \autoref{fig:activity_nodes}.
 
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=120mm, keepaspectratio]{activity_nodes}
-	\caption{The Activity Node structure}
+	\caption{The Activity Node structure.}
 	\label{fig:activity_nodes}
 \end{figure}
 
 \paragraph{Action Node}
 
-\emph{ActionNodes} represent a specific action the activity may execute. This action can be defined in multiple ways, see \autoref{ssec:composing-activities} for more detail.
+\emph{ActionNodes} represent a specific action the activity may execute. This action can be defined in multiple ways.
 
 \paragraph{Pseudo Activity Node}
 
@@ -79,7 +79,7 @@ A node representing the final node of the activity.
 
 \paragraph{Decision Node}
 
-\emph{DecisionNodes} create branches across multiple output flows. An input flow's token is removed, and transfered out to a single output flow - depending on which of the output flows are \emph{enabled}\footnote{In the case when multiple flows are enabled one is chosen nondeterministically}.
+\emph{DecisionNodes} create branches across multiple output flows. An input flow's token is removed, and transfered out to a single output flow -- depending on which of the output flows are \emph{enabled}\footnote{In the case when multiple flows are enabled one is chosen nondeterministically}.
 
 \paragraph{Merge Node}
 
@@ -92,57 +92,57 @@ The root structure defines where the elements of the activity reside in the mode
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=100mm, keepaspectratio]{declaration}
-	\caption{The root structure of the language}
+	\caption{The root structure of the language.}
 	\label{fig:declaration}
 \end{figure}
 
-\paragraph{Activity Declaration}\label{par:activity_declaration}
+\paragraph{Activity Declaration}
 
-All elements inside an activity are contained in a root \emph{ActivityDeclaration} element. It contains \emph{Pins} needed for value passing and a \emph{Definition}. Declarations can be \emph{InlineActivityDeclarations}, which means they are declared in an other declaration, or \emph{NamedActivityDeclaration}, which is a standalone activity declaration - \emph{NamedActivityDeclaration} can be referenced from other parts of the model, while \emph{InlineActivityDeclaration} cannot.
+All elements inside an activity are contained in a root \emph{ActivityDeclaration} element. It contains \emph{Pins} needed for value passing and a \emph{BehaviourDefinition}. Declarations can be \emph{InlineActivityDeclarations}, which means they are declared in an other declaration, or \emph{NamedActivityDeclaration}, which is a standalone activity declaration -- \emph{NamedActivityDeclaration} can be referenced from other parts of the model, while \emph{InlineActivityDeclaration} cannot.
 
-\paragraph{Definition}\label{par:definition}
+\paragraph{Behaviour Definition}
 
-Definitions define how the activity is described; using activity nodes, or by the Gamma Action Language. \emph{ActionDefinition} contains a single \emph{Block}\footnote{A \emph{Block} contains multiple \emph{Actions} which are executed one after the other}, which is executed as is when the activity is executed\footnote{This means, that upon execution the given activity is executed atomically; it will not be interlaced with other XSTS transitions. See \autoref{ssec:calling-activities}.}. \emph{ActivityDefinitions} contain \emph{ActivityNodes} and \emph{Flows}, and are used to \emph{compose} activities.
+\emph{BehaviourDefinitions} define how the activity is described; using activity nodes, or by the Gamma Action Language. \emph{ActionDefinition} contains a single \emph{Block}\footnote{A \emph{Block} contains multiple \emph{Actions} which are executed one after the other}, which is executed as is when the activity is executed\footnote{This means, that upon execution the given activity is executed atomically; it will not be interlaced with other XSTS transitions. See \autoref{ssec:calling-activities}.}. \emph{ActivityDefinitions} contain \emph{ActivityNodes} and \emph{Flows}, and are used to \emph{compose} activities.
 
-\subsubsection*{Composing Activities}\label{ssec:composing-activities}
+\subsubsection*{Composing Activities}
 
-\emph{ActionNodes} may contain a single \emph{ActivityDeclarationReference} to an \emph{ActivityDeclaration}\footnote{If the node does not have any, it is considered a \emph{simple} node, without any implementation}, in which case the execution of said node will also include the execution of the underlying \emph{ActivityDeclaration}. This construction gives us the power to pre-declare, or inline specific activities in the model; and use any definition defined above (\autoref{ssec:root_structure})  for them. \autoref{fig:composite_activity} shows this part of the metamodel.
+\emph{ActionNodes} may contain a single \emph{ActivityDeclarationReference} to an \emph{ActivityDeclaration}\footnote{If the node does not have any, it is considered a \emph{simple} node, without any implementation}, in which case the execution of said node will also include the execution of the underlying \emph{ActivityDeclaration}. This construction gives us the power to pre-declare, or inline specific activities in the model; and use any behaviour definition defined above (\autoref{ssec:root_structure})  for them. \autoref{fig:composite_activity} shows this part of the metamodel.
 
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=80mm, keepaspectratio]{composite-activity}
-	\caption{The action node containment hierarchy}
+	\caption{The action node containment hierarchy.}
 	\label{fig:composite_activity}
 \end{figure}
 
-\subsubsection*{Data Source Reference and Data Target Reference}\label{ssec:data-reference}
+\subsubsection*{Data Source Reference and Data Target Reference}
 
 In order to correctly set a data flow's data source and data target, the model has to store where the pins are referenced. A given \emph{InputPin} can be considered a \emph{DataTarget} from outside of the associated \emph{Activity}, however, it is a \emph{DataSource} from inside the \emph{Defintion}. \emph{DataNodes} can be considered both data sources and data targets. See \autoref{fig:data_source_target_reference} for the corresponding metamodel part.
 
 \begin{figure}[!ht]
 	\centering
-	\includesvg[inkscapelatex=false, width=110mm, keepaspectratio]{data-source-target}
-	\caption{The Data Source-Target reference structure}
+	\includesvg[inkscapelatex=false, width=115mm, keepaspectratio]{data-source-target}
+	\caption{The Data Source-Target reference structure.}
 	\label{fig:data_source_target_reference}
 \end{figure}
 
-\paragraph{Example of inside-input/outside-output pin} \autoref{fig:data_source_target_reference_example} shows an example for the multidirectional effect of pins. From the perspective of the flow \(P_1 \rightarrow P_2\) the pin \(P_1\) is a \emph{DataSource} and the pin \(P_2\) is a \emph{DataTarget}. However, from the perspective of the flow \(P_2 \rightarrow P_3\), the pin \(P_2\) is a \emph{DataSource} - because the latter flow is inside the composite activity.
+\paragraph{Example of inside-input/outside-output pin} \autoref{fig:data_source_target_reference_example} shows an example for the multidirectional effect of pins. From the perspective of the flow \(P_1 \rightarrow P_2\) the pin \(P_1\) is a \emph{DataSource} and the pin \(P_2\) is a \emph{DataTarget}. However, from the perspective of the flow \(P_2 \rightarrow P_3\), the pin \(P_2\) is a \emph{DataSource} -- because the latter flow is inside the composite activity.
 
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=80mm, keepaspectratio]{data-source-target-example}
-	\caption{The Data node reference structure}
+	\caption{The Data node reference structure.}
 	\label{fig:data_source_target_reference_example}
 \end{figure}
 
-\subsubsection*{Pin Reference}\label{ssec:pin-reference}
+\subsubsection*{Pin Reference}
 
 Pin references are used to define a rigid pin-reference structure in the model. \emph{InputPinReferences} have a reference to a specific \emph{InputPin}, \emph{OutputPinReferences} have a reference to a specific \emph{OutputPin}. \emph{InsidePinReferences} and \emph{OutsidePinReferences} are used to define the direction in which the reference sees the given pin; inside references see it from the inside, outside references see it from the outside. The \emph{OutsidePinReference} must also have a reference to the specific \emph{ActionNode} the pin is associated with\footnote{Note that the inside pin reference does not have a node reference, because the node must be the activity that contains the pin}. See \autoref{fig:pin_reference} for the corresponding metamodel part.
 
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=100mm, keepaspectratio]{pin-reference}
-	\caption{The Pin reference structure}
+	\caption{The Pin reference structure.}
 	\label{fig:pin_reference}
 \end{figure}
 
@@ -150,7 +150,7 @@ Pin references are used to define a rigid pin-reference structure in the model. 
 
 In order to make it easier to test and visualise activities, I defined a grammar for the metamodel in Xtext. The SysMLv2 language served as the main inspiration for the language, however, much of the \emph{syntactic sugars} have been omitted for the sake of simplicity. \autoref{lst:gamma-activity} is the activity \autoref{fig:activity-running-example} example written in GATL. For the exact grammar definition, please see \autoref{sec:gamma-activity-language-constructs}.
 
-\begin{lstlisting}[float,language=activity, caption={Gamma Activity Language representation of the compilation activity.}, label={lst:gamma-activity}, linewidth=0.75\textwidth, xleftmargin=0.25\textwidth]
+\begin{lstlisting}[float,language=activity, caption={Gamma Activity Language representation of the compilation activity.}, label={lst:gamma-activity}, linewidth=0.80\textwidth, xleftmargin=0.20\textwidth]
 activity CompilationProcess {
 	var errors : boolean := false
 	
@@ -170,11 +170,17 @@ activity CompilationProcess {
 	final Final
 	
 	control flow from Initial to Merge 
-	// ..
+	control flow from Merge to Fork 
+	control flow from Fork to Read1 
 	control flow from Fork to Read2
+	
 	data flow from Read1.pr1 to Compile1.pc1
 	data flow from Read2.pr2 to Compile2.pc2
-	// ..
+	
+	control flow from Read1 to Join 
+	control flow from Read2 to Join
+	control flow from Join to Link
+	control flow from Link to Decision
 	control flow from Decision to Edit [errors]
 	control flow from Edit to Merge
 	control flow from Decision to Final [!errors]
