--- a/src/content/activity-language/formal-definition.tex
+++ b/src/content/activity-language/formal-definition.tex
@@ -9,55 +9,61 @@
 \newcommand{\sourcenode}[1]{\theta(#1)}
 \newcommand{\targetnode}[1]{\Theta(#1)}
 
-In order to offer mathematical precision, formal verification methods require formally defined models with clear semantics. In this section I present the formal definition of the novel GATL formalism.
+In order to offer mathematical precision, formal verification methods require formally defined models with clear semantics. In this section I present the formal definition of the GATL formalism.
 
 \begin{definition}[Gamma Activity Language]
-	A Gamma Activity is a tuple of \(\mathit{GATL} = (N, P, F, G, D_\mathit{GA}, F_{Action})\), where:
+	A Gamma Activity is a tuple of \(\mathit{GATL} = (D, V, N, P, F, G, F_{Action})\), where:
 	
 	\begin{itemize}
-		\item \(N = N_\mathit{IR} \bigcup N_\mathit{LAS} \) is a set of \emph{Nodes}, where \(N_\mathit{IR}\) contains the \emph{immediate-repeat} nodes and \(N_\mathit{LAS}\) contains the \emph{load-and-sand} nodes (see \autoref{ssec:activities-as-petri-nets}). \(N_\mathit{Action} \in N_\mathit{LAS} \) is a special set of nodes, which are the \emph{Action} nodes;
-		\item \( P \subseteq P_\mathit{In} \bigcup P_\mathit{Out} \) is a set of two types of pins, where \(P_\mathit{In} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) and \(P_\mathit{Out} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) are the set of \emph{InputPins} and \emph{OutputPins}, respectively, with domains \(\{ d_1, \dots, d_n \} \subseteq D_\mathit{GA} \);
-		\item \( F \subseteq F_C \bigcup F_D \), where \(F_C = \{ f_{C_1}, \dots, f_{C_n} \} \) and \(F_D = \{ f_{D_1}, \dots, f_{D_n} \} \) are the control and data flows, respectively. Let us denote the input/output flows of node \(n\) as \( \inflows{n} \) and \( \outflows{n} \), and the source/target pins of flow \(f\) as \( \sourcepin{f} \) and \(\targetpin{f}\). For any given node \(n\), \( \inflows{n} \neq \outflows{n} \) and for any given action node \(n_a\) \( \targetpin{f} \in P_\mathit{In}(n_a) \forall f \in F_D \bigcap \inflows{n_a} \) and \( \sourcepin{f} \in P_\mathit{Out}(n_a) \forall f \in F_D \bigcap \outflows{n_a} \) shall always hold. This means, that a flow cannot be input and output to the same node at the same time, and for a given action node, all input/output flows shall be associated with an input/output token, respectively;
-		\item \(G : F \rightarrow \{ \mathit{True}, \mathit{False} \} \) is a function determining whether a given flow is enabled;
-		\item \(D_\mathit{GA} = \{ d_{1}, d_{2}, \dots, d_{n} \} \) is a set of value domains;
-		\item \(F_{Action} \subseteq d_{1} \times d_{2} \times \dots \times d_{n} \) is a function mapping an \emph{action} nodes input pin values to it's output pin values.
+		\item \(D = \{ d_{1}, d_{2}, \dots, d_{n} \} \) is a set of value domains;
+		\item \(V = \{ v_1, v_2, \dots, v_n \} \) is a set of variables with domains \( \{d_{v_1}, d_{v_2}, \dots, d_{v_n} \} \);
+		\item \(N = N_\mathit{IR} \bigcup N_\mathit{LAS} \) is a set of \emph{Nodes}, where \(N_\mathit{IR}\) contains the \emph{immediate-repeat} nodes and \(N_\mathit{LAS}\) contains the \emph{load-and-send} nodes (see \autoref{ssec:activities-as-petri-nets}). \(N_\mathit{Action} \in N_\mathit{LAS} \) is a special set of nodes, which are the \emph{Action} nodes;
+		\item \( P \subseteq P_\mathit{In} \bigcup P_\mathit{Out} \) is a set of two types of pins, where \(P_\mathit{In} : N_\mathit{Action} \rightarrow \{ p^-_1, \dots, p^-_n \} \) and \(P_\mathit{Out} : N_\mathit{Action} \rightarrow \{ p^+_1, \dots, p^+_m \} \) are the set of \emph{InputPins} and \emph{OutputPins}, respectively, with domains \(\{ d_1, \dots, d_n \} \subseteq D \);
+		\item \( F \subseteq F_C \bigcup F_D \), where \(F_C = \{ f_{C_1}, \dots, f_{C_n} \} \) and \(F_D = \{ f_{D_1}, \dots, f_{D_n} \} \) are the control and data flows, respectively. Let us denote the input/output flows of node \(n\) as \( \inflows{n} \) and \( \outflows{n} \), and the source/target pins of flow \(f\) as \( \sourcepin{f} \) and \(\targetpin{f}\). For any given node \(n\), \( \inflows{n} \neq \outflows{n} \) and for any given action node \(n_a\), \( \forall f \in F_D \bigcap \inflows{n_a} : \targetpin{f} \in P_\mathit{In}(n_a) \) and \( \forall f \in F_D \bigcap \outflows{n_a} : \sourcepin{f} \in P_\mathit{Out}(n_a) \) shall always hold. This means, that a flow cannot be input and output to the same node at the same time, and for a given action node, all input/output flows shall be associated with an input/output port, respectively;
+		\item \(G : F \subseteq g_1 \times g_2 \times \dots \times g_n \) is a function mapping an \emph{expression} to each flow.;
+		\item \(F_{Action} \subseteq a_{1} \times a_{2} \times \dots \times a_{n} \) is a function mapping an \emph{action} to each node.
 	\end{itemize}
 	
-Informally, Gamma Activities are composed of \emph{nodes} and flows in between them. A given  \emph{Action} node may have any number of \emph{pins} with domain \(d \in D\), for which there must be one and only one flow connected to the node. Nodes \(n \in N_\mathit{Action}\) may also contain internal activities denoted \(\mathit{GA}_\mathit{n}\).
+Informally, Gamma Activities are composed of \emph{nodes} and flows in between them. A given  \emph{Action} node may have any number of \emph{pins} with domain \(d \in D\), for which there must be one and only one flow connected to the node.
 
-\(N_\mathit{IR}\) contains the nodes \emph{decision/merge}, while \(N_\mathit{LAS}\) contains the nodes \emph{fork/join}, \emph{initial/final} and \emph{action} nodes. For the most part, these elements have a similar behaviour as their SysML counterparts; however, there is a crucial difference regarding how a flow transmits a token. \autoref{fig:activity-data-flow1} shows a simple data flow between two nodes, connected via their pins. Upon token transfer, the data inside the pins are transferred instantly, without any intermediate state in between. 
+A node \(n \in N_\mathit{Action}\) may define the composition of activities when its effect is to call a specific subset of nodes. The subset is denoted as \(\mathit{GATL}_\mathit{n}\).
+
+\(N_\mathit{IR}\) contains the nodes \emph{decision/merge}, while \(N_\mathit{LAS}\) contains the nodes \emph{fork/join}, \mbox{\emph{initial/final}} and \emph{action} nodes. For the most part, these elements have similar behaviour as their SysML counterparts; however, there is a crucial difference regarding how a flow transmits a token. \autoref{fig:activity-data-flow1} shows a simple data flow between two nodes, connected via their pins. Upon token transfer, the data inside the pins are transferred instantly, without any intermediate state in between. 
 
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{activity-data-flow1}
-	\caption{An example SysML data flow}
+	\caption{An example SysML data flow.}
 	\label{fig:activity-data-flow1}
 \end{figure}
 
-Contrarily, in GATL, the equivalent data flow does indeed contain the given node, creating an intermediate state, where the token is in neither of the nodes. This behavior could be modeled using a \emph{Central Buffer} in SysML (\autoref{fig:activity-data-flow2}). The reason for this solution is simplicity; by creating this intermediate state (and others), it is easier to define the set of transitions necessary to formally define the semantics of the language.
+Contrarily, in GATL, the equivalent data flow does indeed contain the given token, creating an intermediate state, where the token is in neither of the nodes. This behaviour could be modeled using a \emph{Central Buffer} in SysML (\autoref{fig:activity-data-flow2}). The reason for this solution is simplicity; by creating this intermediate state (and others), it is easier to define the set of transitions necessary to formally define the semantics of the language.
 
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=70mm, keepaspectratio]{activity-data-flow2}
-	\caption{An example SysML data flow with central buffer}
+	\caption{An example SysML data flow with a central buffer node.}
 	\label{fig:activity-data-flow2}
 \end{figure}
 	
 \end{definition}\label{def:activity-structure}
 
-\subsection{Behaviour Formalism}
+\subsection{Formal Behaviour}
 
 The behaviour of GATL is defined using the XSTS (\autoref{sec:xsts}) formalism:
 
 \begin{definition}[Gamma Activity Behaviour]
-	\( \mathit{XSTS_{GA}} = (D, V, V_C, \mathit{IV}, \mathit{Tr}, \mathit{In}, \mathit{En}) \), where:
+	
+	In the context of XSTS, the defined set \( D \) becomes an XSTS domain set, the set \( V \) becomes an XSTS variable set. On a similar line, the functions \( G \) and \( F_{Action} \) return an \emph{assume} and a \emph{sequence} operation, respectively.
+	
+	The XSTS describing the behaviour of GATL is the following: \( \mathit{XSTS_{GATL}} = (D, V, V_C, \mathit{IV}, \mathit{Tr}, \mathit{In}, \mathit{En}) \), where:
 	
 	\begin{itemize}
-		\item \( D = D_\mathit{GA} \bigcup d_\mathit{NodeState} \bigcup d_\mathit{FlowState} \), where \(D_\mathit{GA}\) is the domain in \emph{GA}, \(d_\mathit{NodeState} = \{ \mathit{Idle}, \mathit{Running}, \mathit{Done} \} \) and \(d_\mathit{FlowState} = \{ \mathit{Empty}, \mathit{Full} \} \) are the node and flow state domains representing their internal state. Node state \emph{Idle} means a node is ready for a token, \emph{Running} means it is currently executing and \emph{Done} means it is done (but still contains a token). Flow states \emph{Empty} and \emph{Full} represent whether the flow contains a token;
-		\item \( V = V_\mathit{NS} \bigcup V_\mathit{FS} \bigcup V_\mathit{NV} \bigcup V_\mathit{FV} \bigcup V_\mathit{PV} \), where \(V_\mathit{NS} = \{ v_1, v_2, \dots, v_n \} \) is the variable representing the \emph{state} of the nodes with domain \(d_\mathit{NodeState}\), \(V_\mathit{FS} = \{ v_1, v_2, \dots, v_n \} \) is the variable representing the \emph{state} of the flows with domain \(d_\mathit{FlowState}\) and \( V_\mathit{NV} \), \( V_\mathit{FV} \), \( V_\mathit{PV} \) are the variables representing the values contained inside \emph{flows}, \emph{nodes} and \emph{pins} respectively;
+		\item \( D = \mathit{GATL} \rangle D \bigcup d_\mathit{NodeState} \bigcup d_\mathit{FlowState} \), where \(\mathit{GATL} \rangle D\) is the domain in \emph{GATL}, \(d_\mathit{NodeState} = \{ \mathit{Idle}, \mathit{Running}, \mathit{Done} \} \) and \(d_\mathit{FlowState} = \{ \mathit{Empty}, \mathit{Full} \} \) are the node and flow state domains representing their internal state. Node state \emph{Idle} means a node is ready for a token, \emph{Running} means it is currently executing and \emph{Done} means it is done (but still contains a token). Flow states \emph{Empty} and \emph{Full} represent whether the flow contains a token;
+		\item \( V = \mathit{GATL} \rangle V \bigcup V_\mathit{NS} \bigcup V_\mathit{FS} \bigcup V_\mathit{NV} \bigcup V_\mathit{FV} \bigcup V_\mathit{PV} \), where \( \mathit{GATL} \rangle V \) is the variables in \emph{GATL},  \(V_\mathit{NS} = \{ v_\mathit{NS_1}, v_\mathit{NS_2}, \dots, v_\mathit{NS_n} \} \) is the variable representing the \emph{state} of the nodes with domain \(d_\mathit{NodeState}\), \mbox{\(V_\mathit{FS} = \{ v_\mathit{FS_1}, v_\mathit{FS_2}, \dots, v_\mathit{FS_m} \} \)} is the variable representing the \emph{state} of the flows with domain \(d_\mathit{FlowState}\) and \( V_\mathit{NV} \), \( V_\mathit{FV} \), \( V_\mathit{PV} \) are the variables representing the values contained inside \emph{flows}, \emph{nodes} and \emph{pins} respectively;
 		\item \( IV \) sets all variables to their default value;
-		\item \( V_C = V_\mathit{NS} \bigcup V_\mathit{FS} \) are the \emph{control variables}\footnote{We don't have to set the value variables as control variables, because they only change when the given flow's or node's state variable changes};
-		\item \( \mathit{Tr} = T \), where \(T\) is the single transition defined down below;
+		\item \( V_C = V_\mathit{NS} \bigcup V_\mathit{FS} \) are the \emph{control variables};
+		\item \( \mathit{Tr} = T \), where \(T\) is single transition (defined at the end of the section);
 		\item \( \mathit{In} \) sets all values of variables associated with \emph{InitialNodes} to \emph{Running};
 		\item \( \mathit{En} = \emptyset \) is the empty environment transition, as simple activities do not have environments.
 	\end{itemize}
@@ -75,9 +81,9 @@ We also define the following helper functions:
 	\item \(\mathit{PV}_N : N \times P \rightarrow V_\mathit{PV} \) is a function returning the \emph{value variable} of a pin inside a node.
 \end{itemize}
 
-Informally, the behaviour of Gamma Activities is determined by the nodes' \emph{state} (\emph{Idle}, \emph{Running}, \emph{Done}), the nodes' and their pins' values, the flows' \emph{state} (\emph{Empty}, \emph{Full}) and their values. For example, given an action node \(n\) and one of its pins \(p_1\), \(\mathit{PV}_N(n, p_1)\) would give us the exact value that \(p_1\) contains in this instance. This gives us the power - contrary to the Activity-PN mapping introduced in \autoref{ssec:activities-as-petri-nets} - to formally define the values contained in tokens.
+Informally, the behaviour of Gamma Activities is determined by the nodes' \emph{state} (\emph{Idle}, \emph{Running}, \emph{Done}), the nodes' and their pins' values, the flows' \emph{state} (\emph{Empty}, \emph{Full}) and their values. For example, given an action node \(n\) and one of its pins \(p_1\), \(\mathit{PV}_N(n, p_1)\) would give us the exact value that \(p_1\) contains in this instance. This gives us the power -- contrary to the Activity-PN mapping introduced in \autoref{ssec:activities-as-petri-nets} -- to formally define the values contained in tokens.
 
-This definition gives us the structure to define the exact behaviour of a Gamma Activity. In the following, I incrementally build up the parts of transition \(T\), and then propose an algorithm constructing the XSTS. 
+Each flow and node may only contain one flow at a time; creating and destroying them on each transfer. The flow of tokens is modeled by changing the value of the state variables in such a way, that keeps the defined semantics. In the following, I incrementally build up these change operations and then construct the resulting XSTS. 
 
 Let us define a shorthand function for finding a node's input variable associated with a given flow:
 
@@ -99,15 +105,14 @@ And a shorthand function for finding a node's output variable associated with a 
 	\end{cases}
 \end{equation*}
 
-These notations will help us easily transfer the data to and from the node value variables, as they hide the difference between the pin variables and the node variables.
-
 \newcommand{\enabled}{\mathit{En}}
 
-Next, I define various functions that return operations, which will be used to construct the transition \(T\). In the following, I use the following notations for XSTS operations:
+Next, I define various functions that return operations, which will be used to construct the transition \(T\). In the next section, I use the following notations for XSTS operations:
 
 \begin{itemize}
-	\item \emph{sequences} are represented as operations after one another, or \(\mathit{sequence}(op)\);
+	\item \emph{sequences} are represented as operations after one another, or \(\mathit{sequence}(op)\), where \(op\) is a set of operations;
 	\item \emph{parallels} are represented as \(\mathit{parallel}(op)\), where \(op\) is a set of operations;
+	\item \emph{choices} are represented as \(\mathit{choice}(op)\), where \(op\) is a set of operations;
 	\item \emph{assumptions} are represented as \(\mathit{assume}(e)\), where \(e\) is an expression;
 	\item \emph{assignments} are represented as \(\mathit{assign}(v, value)\), where \(v\) and \(value\) are a \emph{variable} and a \emph{value}, respectively, with the same \emph{domain}.
 \end{itemize}
@@ -120,21 +125,21 @@ Next, I define various functions that return operations, which will be used to c
 		&\mathit{assume}(S_N(\targetnode{f}) = \mathit{Idle}) \\
 		&\mathit{assign}(S_F(f), \mathit{Empty}) \\
 		&\mathit{assign}(S_N(\targetnode{f}), \mathit{Running}) \\
-		&\mathit{assign}(S_N(V_{N_\mathit{In}}(\targetnode{f}, f)), V_F(f)) \\
+		&\mathit{assign}(V_{N_\mathit{In}}(\targetnode{f}, f), V_F(f)) \\
 	\end{align*}
 
-	Informally, the returned operation checks that the node is in \emph{Idle} state and the flow is in \emph{Full} state. Next, it transfers the token by changing their states. Let \(O_\mathit{FlowOut}(f)\) be the function returning a \emph{sequential} operation, which transfers a token from a node to a flow:
+	Informally, the returned operation checks that the flow's target node is in \emph{Idle} state and the flow is in \emph{Full} state. In which case it transfers the token by changing the state of the target node to \emph{Running}, and its state to \emph{Empty}. It also transfers its value to the correct value variable of the node. Let \(O_\mathit{FlowOut}(f)\) be the function returning a \emph{sequential} operation, which transfers a token from a node to a flow:
 	
 	\begin{align*}
-		&\mathit{assume}(G(f) = \mathit{true}) \\
+		&G(f)\\
 		&\mathit{assume}(S_F(f) = \mathit{Empty}) \\
 		&\mathit{assume}(S_N(\sourcenode{f}) = \mathit{Done}) \\
 		&\mathit{assign}(S_F(f), \mathit{Full}) \\
 		&\mathit{assign}(S_N(\sourcenode{f}), \mathit{Idle}) \\
-		&\mathit{assign}(V_F(f), S_N(V_{N_\mathit{Out}}(\sourcenode{f}, f))) \\
+		&\mathit{assign}(V_F(f), V_{N_\mathit{Out}}(\sourcenode{f}, f)) \\
 	\end{align*}
 
-	The returned operation checks that the node is \emph{Done} and the flow is \emph{Empty} and \emph{enabled}, in which case it transfers the token by changing their states. Note that both of the operations transfer the value of the node to the flow, or the value of the flow to the node using the previously defined helper notations.
+	The returned operation checks that the node is \emph{Done} and the flow is \emph{Empty} and \emph{enabled}, in which case it transfers the token by changing their states. Note, that it also calls the function \(G\), which returns an assume operation for the given flow. 
 \end{definition}
 
 \begin{definition}[Node Token In/Out Operations]
@@ -169,11 +174,11 @@ Next, I define various functions that return operations, which will be used to c
 		\end{cases}
 	\end{align*}
 
-	In which case, \(O_\mathit{NodeIO}(n)\) returns an operation transferring the tokens in and out of the specified node. 
+	In which case, \(O_\mathit{NodeIO}(n)\) returns an operation that can transfer the tokens in/out of the specified node. 
 
 \end{definition}
 
-Informally, these operations realise the semantics of the \emph{LAS} and \emph{IR} nodes, by either putting the \emph{flow in} and \emph{flow out} operations inside a \emph{parallel} or a \emph{choice}, respectively\footnote{Parallel operations execute \emph{all} contained operations at the same time, while choices chose one at random}.
+Informally, these operations realise the semantics of the \emph{LAS} and \emph{IR} nodes, by either putting the \emph{flow in} and \emph{flow out} operations inside a \emph{parallel} or a \emph{choice}, respectively.
 
 \begin{definition}[Node Run Operations]
 	Node transition operations take the given node from \emph{Running} state to \emph{Done} state, while also executing the underlying operation. Generally, \(O_\mathit{NodeRun}(n)\) function is defined as:
@@ -183,13 +188,13 @@ Informally, these operations realise the semantics of the \emph{LAS} and \emph{I
 		&\mathit{assign}(S_N(n), \mathit{Done}) \\
 	\end{align*}
 
-	However, some nodes have special behaviours. If the node is an \emph{Action} node, it can contain either a \emph{Gamma Action} expression, or a composite \emph{Activity} (see \autoref{sec:activity-grammar} for more information).
+	However, some nodes have special behaviours. If the node is an \emph{Action} node, it can contain either a \emph{Gamma Action} expression, or a composite \emph{Activity}.
 
 	\begin{itemize}
-		\item If the node is an \emph{Action} node, the contained \emph{Gamma action} is mapped to an operation \(O_\mathit{Action}(n)\), and added to \( O_\mathit{NodeRun}(n) \). Let us call this function \(O_\mathit{NodeRun}^\prime(n)\)
-		\item If the node is an \emph{Action} node, the contained activity first has to be started, and the state of the node can change only when the contained activity is done. Let us call this function as \(O_\mathit{NodeRun}^{\prime\prime}(n)\).
+		\item If the node contains \emph{Gamma Action}, the contained action is mapped to an operation \(O_\mathit{Action}(n)\), and added to \( O_\mathit{NodeRun}(n) \). Let us call this function \(O_\mathit{NodeRun}^\prime(n)\)
+		\item If the node contains an \emph{Activity}, the contained activity first has to be started, and the state of the node can change only when the contained activity is done. Let us call this function as \(O_\mathit{NodeRun}^{\prime\prime}(n)\).
 	\end{itemize}
-
+	\clearpage
 	\(O_\mathit{Run}^\prime(n)\) function is defined as:
 	
 	\begin{align*}
@@ -198,14 +203,14 @@ Informally, these operations realise the semantics of the \emph{LAS} and \emph{I
 		&\mathit{assign}(S_N(n), \mathit{Done}) \\
 	\end{align*}
 
-	Let \(\mathit{In}(n)\) and \(\mathit{Fin}(n)\) be the sets of \emph{initial} and \emph{final} nodes in \(\mathit{GA}_\mathit{n}\). 
+	In contrast, \(O_\mathit{NodeRun}^{\prime\prime}(n)\) has to be defined to start and wait for the contained activity. Let \(\mathit{In}(n)\) and \(\mathit{Fin}(n)\) be the sets of \emph{initial} and \emph{final} nodes in \(\mathit{GATL}_\mathit{n}\). 
 	
 	\begin{align*}
 		O_\mathit{Start}(n) &= \mathit{sequence}\left(
 			\bigcup_{n_\mathit{In} \in \mathit{In}(n)} \left(\mathit{assume}(S_N(n_\mathit{In}) = \mathit{Idle}) \bigcup \mathit{assign}(S_N(n_\mathit{In}), \mathit{Running})
 		\right)\right)\\
 		O_\mathit{Finish}(n) &= \mathit{sequence}\left(
-			\bigcup_{n_\mathit{Fin} \in \mathit{Fin}(n)} \mathit{assume}(S_N(n_\mathit{Fin}) = \mathit{Done}) \bigcup \mathit{assign}(S_N(n), \mathit{Done})
+			\left(\bigcup_{n_\mathit{Fin} \in \mathit{Fin}(n)} \mathit{assume}(S_N(n_\mathit{Fin}) = \mathit{Done})\right) \bigcup \mathit{assign}(S_N(n), \mathit{Done})
 		\right)
 	\end{align*}
 
@@ -226,24 +231,24 @@ Informally, these operations realise the semantics of the \emph{LAS} and \emph{I
 \begin{subfigure}[b]{\textwidth}
 	\centering
 	\includesvg[inkscapelatex=false, width=80mm, keepaspectratio]{activity-state-function}
-	\caption{\(O_\mathit{Node}\) operations for a \emph{LAS} node}
+	\caption{\(O_\mathit{Node}\) operations for a \emph{LAS} node.}
 	\label{fig:activity-state-function-las}
 \end{subfigure}\\
 \vspace{10mm}
 \begin{subfigure}[b]{\textwidth}
 	\centering
 	\includesvg[inkscapelatex=false, width=80mm, keepaspectratio]{activity-state-function-ir}
-	\caption{\(O_\mathit{Node}\) operations for an \emph{IR} node}
+	\caption{\(O_\mathit{Node}\) operations for an \emph{IR} node.}
 	\label{fig:activity-state-function-ir}
 \end{subfigure}\\
 \vspace{10mm}
 \begin{subfigure}[b]{\textwidth}
 	\centering
 	\includesvg[inkscapelatex=false, width=60mm, keepaspectratio]{activity-state-function-composite}
-	\caption{\(O_\mathit{NodeRun}\) operations for a \emph{composite} action node}
+	\caption{\(O_\mathit{NodeRun}\) operations for a \emph{composite} action node.}
 	\label{fig:activity-state-function-composite}
 \end{subfigure}\\
-\caption{An illustration of the state change operations}
+\caption{An illustration of the state change operations.}
 \label{fig:activity-state-functions}
 \end{figure}
 
@@ -255,7 +260,7 @@ Informally, these operations realise the semantics of the \emph{LAS} and \emph{I
 	\end{equation*}
 \end{definition}
 
-Informally, this is a choice operation, that either moves the tokens in/out, or executes the internal action of the node. The various operations defined in the previous sections can be seen in \autoref{fig:activity-state-functions}. 
+Informally, \(O_\mathit{Node}(n)\) returns a choice operation, that either moves the tokens in/out, or executes the internal action of the node. The various operations defined in the previous sections can be seen in \autoref{fig:activity-state-functions}. 
 
 \iffalse
 
@@ -353,8 +358,8 @@ The function \(F_{Our}\) takes the token from node, and puts it in its output fl
 
 \fi
 
-As the final step, we construct the transition \(T\), by applying the \(O_\mathit{Node}(n)\) function on each node:
+As the final step, the transition \(T\) is constructed by applying the \(O_\mathit{Node}(n)\) function on each node, and wrapping them with a \emph{parallel} operation:
 
 \begin{equation*}
-	T = \bigcup_{n \in N} O_\mathit{Node}(n)
+	T = \mathit{parallel}\left( \bigcup_{n \in N} O_\mathit{Node}(n) \right)
 \end{equation*}
