--- a/src/include/packages.tex
+++ b/src/include/packages.tex
@@ -82,7 +82,7 @@ tabsize=4
 }
 
 \lstdefinelanguage{statechart}{
-morekeywords={+>, , ->, -o)-, :, ::, :=, ;, <, <+, <-, <=, =, ==, >, >=, ?, @, @AdaptiveContractStatechart, @GuardEvaluation, @OrthogonalRegionSchedule, @Phase, @PhaseStatechart, @RegionSchedule, @ScenarioAllowedWaitAnnotation, @ScenarioContractStatechart, @StatechartContract, @TransitionPriority, [, ], \^, action, activity, adapter, and, any, assert, async, beginning-of-step, bind, boolean, bottom-up, branch, break, call, capacity, cascade, case, channel, choice, clock, component, const, constraint, control, cycle, data, decimal, decision, deep, default, discard, div, do, else, elseif, entry, enum, event, execute, exists, exit, extends, false, final, flow, for, forall, fork, from, full step, function, history, if, imply, import, in, in-state, incoming, inf, initial, inout, integer, interface, invariant, join, lambda, language, merge, mod, ms, no history, not, of, off, oldest, on-the-fly, or, order-based, out, trigger, step, act, schedule, E, F, variable, analysis, minimum-orchestrating-period, maximum-orchestrating-period, package, optimize, property-file, file, verification, permissive, persistent, port, priority, procedure, provides, queue, raise, random, range, rate, rational, record, region, requires, reset, retrieve-count, return, run, s, scheduled-async, select, self, sequential, set, shallow, state, statechart, strict, switch, sync, tie, timeout, to, top-down, transient, transition, true, type, value-based, var, void, when, xor, || },
+morekeywords={+>, , ->, -o)-, :, ::, :=, ;, <, <+, <-, <=, =, ==, >, >=, ?, @, @AdaptiveContractStatechart, @GuardEvaluation, @OrthogonalRegionSchedule, @Phase, @PhaseStatechart, @RegionSchedule, @ScenarioAllowedWaitAnnotation, @ScenarioContractStatechart, @StatechartContract, @TransitionPriority, [, ], \^, action, activity, adapter, and, any, assert, async, beginning-of-step, bind, boolean, bottom-up, branch, break, call, capacity, cascade, case, channel, choice, clock, component, const, constraint, control, cycle, data, decimal, decision, deep, default, discard, div, do, else, elseif, entry, enum, event, execute, exists, exit, extends, false, final, flow, for, forall, fork, from, full step, function, history, if, imply, import, in, in-state, incoming, inf, initial, inout, integer, interface, invariant, join, lambda, language, merge, mod, ms, no history, not, of, off, oldest, on-the-fly, or, order-based, out, trigger, -o)-, step, act, schedule, E, F, variable, analysis, minimum-orchestrating-period, maximum-orchestrating-period, package, optimize, property-file, file, verification, permissive, persistent, port, priority, procedure, provides, queue, raise, random, range, rate, rational, record, region, requires, reset, retrieve-count, return, run, s, scheduled-async, select, self, sequential, set, shallow, state, statechart, strict, switch, sync, tie, timeout, to, top-down, transient, transition, true, type, value-based, var, void, when, xor, || },
 keywordstyle=[2]{\textbf},
 morecomment=[l]{//}, 
 morecomment=[s]{/*}{*/}, 
@@ -103,3 +103,5 @@ tabsize=4
 \definecolor{sh_keyword}{rgb}{0.52, 0.11, 0.36}  % #5F1441
 \definecolor{sh_string}{rgb}{0.06, 0.09, 0.85} % #101AF9
 
+\usepackage[normalem]{ulem}
+\useunder{\uline}{\ul}{}
